# moneta

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODOS.md  _PHASE_1_PLAN.md  _SPEC.md  pyproject.toml
.claude/skills/moneta/: SKILL.md  moneta-reference.md
.claude/skills/moneta/references/: moneta-reference.md
.github/workflows/: ci.yml  release.yml
examples/: retirement_basic.moneta.yaml  retirement_with_equity.moneta.yaml  retirement_with_spending.moneta.yaml  scenario_comparison.moneta.yaml
src/moneta/: __init__.py  cli.py
src/moneta/engine/: orchestrator.py  state.py
src/moneta/engine/processors/: __init__.py  cash_flow.py  events.py  growth.py  inflation.py  transfer.py
src/moneta/output/: report.py  terminal.py
src/moneta/parser/: loader.py  models.py  types.py
src/moneta/presets/: __init__.py
src/moneta/presets/data/: sp500.yaml  tech_startup_equity.yaml  total_market.yaml  us_inflation.yaml  us_treasuries.yaml
src/moneta/query/: engine.py  expressions.py
tests/: conftest.py  test_financial_correctness.py
tests/fixtures/: cash_flow_model.moneta.yaml  equity_model.moneta.yaml  simple_model.moneta.yaml  sweep_model.moneta.yaml
tests/test_engine/: test_cash_flow.py  test_events.py  test_growth.py  test_inflation.py  test_orchestrator.py  test_state.py  test_transfer.py
tests/test_integration/: test_end_to_end.py
tests/test_output/: test_report.py  test_terminal.py
tests/test_parser/: test_cash_flow_types.py  test_loader.py  test_models.py  test_types.py
tests/test_query/: test_engine.py  test_expressions.py
