[project]
name = "moneta"
version = "0.1.0"
description = "Probabilistic financial modeling engine with Monte Carlo simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
moneta = "moneta.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
